[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "User management service for Zia Mart"
authors = ["Zia Khan <zia@panacloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"  # PostgreSQL 
pydantic = "^2.6.4"
Pillow = "^10.4.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.1.1"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.42.0"}
bcrypt = "4.0.1"
pytest-asyncio = "^0.20.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.2"
pre-commit = "^3.6.2"
coverage = "^7.4.3"
black = "^23.7.0"
tox = "^4.10.1"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", "alembic"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.alembic]
script_location = "alembic"
sqlalchemy.url = "postgresql://ziakhan:my_password@postgres_db:5432/product_service_db"